# Restful-apis

./: pyproject.toml
core/: settings.py
tasks/: models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
